# ros_ws

./: mav.parm  mav.tlog  mav.tlog.raw
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/drone_control/: circle  crepe  drone_control_node  figure8  heart
devel/lib/drone_optique/: detect_focus  detect_pattern  optical_flow  track_object
devel/lib/pkgconfig/: drone_control.pc  drone_optique.pc  shape_drone_drawer.pc  smart_land.pc
devel/lib/smart_land/: land
devel/share/drone_control/cmake/: drone_controlConfig.cmake
devel/share/drone_optique/cmake/: drone_optiqueConfig.cmake
devel/share/shape_drone_drawer/cmake/: shape_drone_drawerConfig.cmake
devel/share/smart_land/cmake/: smart_landConfig.cmake
src/drone_control/: CMakeLists.txt
src/drone_control/include/: Receiver.h
src/drone_control/src/: Receiver.cpp  control_circle_node.cpp  control_crepe_node.cpp  control_figure8_node.cpp  control_heart_node.cpp  control_node.cpp
src/drone_optique/: CMakeLists.txt
src/drone_optique/src/: detect_focus.cpp  detect_pattern.cpp  optical_flow.cpp  ost.yaml  track_object.cpp  track_people.cpp
src/smart_land/: CMakeLists.txt
src/smart_land/include/: Receiver.h  SmartLand.h
src/smart_land/src/: Receiver.cpp  SmartLand.cpp  land_node.cpp
